--- a/app/src/main/res/layout/second_activity.xml
+++ b/app/src/main/res/layout/second_activity.xml
@@ -6,6 +6,7 @@
 
     <Button
         android:id="@+id/Button1"
+        android:onClick="button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button1"
