--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,39 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_height="match_parent"
     android:layout_width="match_parent">
 
-    <TextView
-        android:id="@+id/text_view"
+    <app.wyyzzz.uiwidgettest.TitleLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="this is a TextView"
-        android:textSize="24sp"
-        android:textColor="#00ff00"
-        android:gravity="center"/>
+        android:layout_height="wrap_content"/>
 
-
-    <Button
-        android:id="@+id/button"
-        android:onClick="btn1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        android:textAllCaps="false"/>
-
-    <EditText
-        android:id="@+id/Edit_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Type something here"
-        android:maxLines="2"/>
-
-    <ImageView
-        android:id="@+id/image_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/img_1"/>
 
 
 </LinearLayout>
