--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:background="@drawable/img_3">
 
     <Button
         android:id="@+id/title_back"
@@ -11,7 +11,7 @@
         android:layout_gravity="center"
         android:layout_margin="5dp"
         android:text="Back"
-        android:textColor="#fff"/>
+        android:textColor="#fff" />
 
     <TextView
         android:id="@+id/title_text"
@@ -22,7 +22,7 @@
         android:gravity="center"
         android:text="Title Text"
         android:textColor="#fff"
-        android:textSize="24sp"/>
+        android:textSize="24sp" />
 
     <Button
         android:id="@+id/title_edit"
